--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name = "description" content = "Very simple JavaScript files to help you explore and build new tools on GitHub." >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
 <meta name = "date" content = "2019-01-09" >
-<meta name = "release" content = "1.0" >
+<meta name = "release" content = "13.2.1" >
 <title>pushMe-pullYou</title>
 <link rel="stylesheet" href="js-tootoo13/style.css">
 </head>
@@ -32,6 +32,12 @@ MNU.currentStatusCore =
 		</h3>
 
 		<p>New home page script built with <a href="#tootoo13/README.md" target="_blank">TooToo13</a>.</p>
+		<p>
+			Change log
+			<ul>
+				<li>2018-12-29 ~ Add helpItem class</li>
+			</ul>
+		</p>
 	`;
 
 MNU.description =
@@ -65,12 +71,17 @@ MNU.appUrl = ""; //"https://pushme-pullyou.github.io/#tootoo-templates/hamburger
 MNU.urlSourceCodeImage="https://status.github.com/images/invertocat.png";
 MNU.urlSourceCodeIcon=`<img src="${ MNU.urlSourceCodeImage }" height=18 >`;
 
+MNU.footerUrl = "#";
+MNU.footerTarget = ""; //"target=_blank";
+MNU.footerIssues = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/issues";
+
 // for parsing
 OHC.user = 'pushme-pullyou';
 OHC.repo = 'pushme-pullyou.github.io';
 OHC.pathRepo = '';
 OHC.branch = '/master/';
 
+//OHC.urlGitHubPage = location.href.includes( OHC.repo ) ? '../' : 'https://' + OHC.repo + "/";
 OHC.urlGitHubPage = '';
 
 </script>
@@ -92,7 +103,7 @@ OHC.urlGitHubPage = '';
 
 				<section id=FOBsecFileOpenBasic ></section>
 
-				<div id="FILdivFileSave" ></div>
+				<section id=FILdivFileSave ></section>
 
 			</details>
 
@@ -113,7 +124,7 @@ OHC.urlGitHubPage = '';
 
 		</details>
 
-		<h1 onclick=navMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top of menu' > ❦ </h1>
+		<h1 onclick=navMenu.scrollTop=0; style=cursor:pointer;text-align:center; title="go to top of menu" > ❦ </h1>
 
 	</nav>
 
