--- a/tootoo13/tootoo13.html
+++ b/tootoo13/tootoo13.html
@@ -5,21 +5,22 @@
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
 <meta name = "description" content = "This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2019-01-08" >
-<meta name = "release" content = "13.1" >
+<meta name = "date" content = "2019-01-09" >
+<meta name = "release" content = "13.2.1" >
 <title>TooToo13</title>
-<link rel="stylesheet" href="js13/style.css">
+<link rel="stylesheet" href="js-tootoo13/style.css">
 </head>
 <body>
 <script src="https://rawgit.com/showdownjs/showdown/1.9.0/dist/showdown.min.js" ></script>
 
-<script src="js13/mnu-menu.js" ></script>
-<script src="js13/fob-file-open-basic.js" ></script>
-<script src="js13/thm-theme-select.js" ></script>
-<script src="js13/ohc-on-hash-change.js" ></script>
-<script src="js13/tmp-template.js" ></script>
+<script src="js-tootoo13/mnu-menu.js" ></script>
+<script src="js-tootoo13/fob-file-open-basic.js" ></script>
+<script src="js-tootoo13/thm-theme-select.js" ></script>
+<script src="js-tootoo13/ohc-on-hash-change.js" ></script>
+<script src="js-tootoo13/tmp-template.js" ></script>
 <script>
 
+//Copyright 2019 pushMe-pullYou authors. MIT License
 
 MNU.currentStatusCore =
 	`
@@ -31,19 +32,24 @@ MNU.currentStatusCore =
 		</h3>
 
 		<p>TooToo Status</p>
+
+		<p>
+			Change log
+			<ul>
+				<li>2018-12-29 ~ Add helpItem class</li>
+			</ul>
+		</p>
 	`;
 
-MNU.descriptionCore =
+MNU.description =
 	`
-		<p>
-			This menu is a component of a basic html content management script with sliding menu, CSS theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more
-		</p>
+		This menu is a component of a basic html content management script with sliding menu, CSS theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more
 	`;
 
 
 const uriDefaultFile = 'README.md';
 
-THM.cssBasic = "js13/style.css";
+THM.cssBasic = "js-tootoo13/style.css";
 
 // For main menu header
 MNU.urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
@@ -63,17 +69,21 @@ MNU.appUrl = ""; //"https://pushme-pullyou.github.io/#tootoo-templates/hamburger
 MNU.urlSourceCodeImage="https://status.github.com/images/invertocat.png";
 MNU.urlSourceCodeIcon=`<img src="${ MNU.urlSourceCodeImage }" height=18 >`;
 
+MNU.footerUrl = "#../";
+MNU.footerTarget = ""; //"target=_blank";
+MNU.footerIssues = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/issues";
+
 // for parsing
 OHC.user = 'pushme-pullyou';
 OHC.repo = 'pushme-pullyou.github.io';
 OHC.pathRepo = '';
 OHC.branch = '/master/';
 
-OHC.urlGitHubPage = location.href.includes( OHC.repo ) ? '../' : 'https://' + OHC.repo + "/";
-
-
+//OHC.urlGitHubPage = location.href.includes( OHC.repo ) ? '../' : 'https://' + OHC.repo + "/";
+OHC.urlGitHubPage = "../"
 
 </script>
+
 
 	<nav id="navMenu" >
 
@@ -91,7 +101,7 @@ OHC.urlGitHubPage = location.href.includes( OHC.repo ) ? '../' : 'https://' + OH
 
 				<section id=FOBsecFileOpenBasic ></section>
 
-				<div id="FILdivFileSave" ></div>
+				<section id=FILdivFileSave ></section>
 
 			</details>
 
@@ -112,7 +122,7 @@ OHC.urlGitHubPage = location.href.includes( OHC.repo ) ? '../' : 'https://' + OH
 
 		</details>
 
-		<h1 onclick=navMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top of menu' > ❦ </h1>
+		<h1 onclick=navMenu.scrollTop=0; style=cursor:pointer;text-align:center; title="go to top of menu" > ❦ </h1>
 
 	</nav>
 
