--- a/tootoo13/cookbook/mnu-menu/mnu-menu.html
+++ b/tootoo13/cookbook/mnu-menu/mnu-menu.html
@@ -5,7 +5,7 @@
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
 <meta name = "description" content = "TooToo menu testing script" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2019-01-06" >
+<meta name = "date" content = "2019-01-10" >
 <title>MNU Menu Test</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -20,13 +20,12 @@
 
 		</header>
 
-		<div>
-			<p>
-				<button id=but onclick=setIt(); accessKey= 'z' title='access key: z '>button button</button>
-			</p>
-		</div>
+
+		<hr>
 
 		<div>lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</div>
+
+		<hr>
 
 		<details id=detMenuHelp open >
 
@@ -90,13 +89,17 @@ function init() {
 
 	MNUdivFooter.innerHTML = MNU.getNavFooter(); // not essential
 
+	// for testing
+
+	window.addEventListener ( 'hashchange', onHashChange, false );
+
 }
 
 
 
-function setIt() {
+function onHashChange() {
 
-	divContents.innerHTML += `<p>${ ( performance.now() ) } - Howdy! </p>`;
+	divContents.innerHTML += `<p>${ location.hash }</p>`;
 
 }
 
