--- a/tootoo13/cookbook/mnu-menu/mnu-menu.html
+++ b/tootoo13/cookbook/mnu-menu/mnu-menu.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
-<meta name = "description" content = "TooToo menu testing script" >
+<meta name = "description" content = "TooToo menu testing page and script" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
 <meta name = "date" content = "2019-01-10" >
 <title>MNU Menu Test</title>
@@ -74,7 +74,7 @@
 
 <script>
 
-const urlSourceCode = "https://github.com/zzzzz/xxxxx.html";
+const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo13/cookbook/mnu-menu";
 const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
 
 init();
@@ -92,6 +92,8 @@ function init() {
 	// for testing
 
 	window.addEventListener ( 'hashchange', onHashChange, false );
+
+	window.addEventListener ( 'click', function(){ divPopUpData.innerHTML = ""; }, false );
 
 }
 
