--- a/index-2019-01-17.html
+++ b/index-2019-01-17.html
@@ -5,8 +5,8 @@
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
 <meta name = "description" content = "This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2019-01-19" >
-<meta name = "release" content = "13.2" >
+<meta name = "date" content = "2019-01-17" >
+<meta name = "release" content = "13.1" >
 <title>pushMe-pullYou</title>
 
 </head>
@@ -26,7 +26,7 @@ MNU.currentStatusCore =
 	`
 		<h3>
 			pushMe-pullYou
-			R${ document.head.querySelector( '[ name=release ]' ).content }
+			<!--R${ document.head.querySelector( '[ name=release ]' ).content } -->
 			~
 			${ document.head.querySelector( '[ name=date ]' ).content }
 		</h3>
@@ -59,7 +59,7 @@ const uriDefaultFile = '#README.md';
 THM.cssBasic = "https://pushme-pullyou.github.io/tootoo13/js-tootoo13/style.css";
 
 // For main menu header
-MNU.urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/";
+MNU.urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
 
 MNU.homeText = ""; // "pushMe-pullYou";
 MNU.homeTitle = ""; "Very simple JavaScript files to help you explore and build new tools on GitHub.";
@@ -76,7 +76,7 @@ MNU.appUrl = ""; //"https://pushme-pullyou.github.io/#tootoo-templates/hamburger
 MNU.urlSourceCodeImage="https://status.github.com/images/invertocat.png";
 MNU.urlSourceCodeIcon=`<img src="${ MNU.urlSourceCodeImage }" height=18 >`;
 
-MNU.footerUrl = "#../../";
+MNU.footerUrl = "#";
 MNU.footerTarget = ""; //"target=_blank";
 MNU.footerIssues = "https://github.com/pushme-pullyou/tootoo13/issues";
 
