--- a/tootoo-more2/open-markdown-or-html/open-markdown-or-html-r1.html
+++ b/tootoo-more2/open-markdown-or-html/open-markdown-or-html-r1.html
@@ -17,7 +17,7 @@
 </style>
 </head>
 <body>
-<script src=https://rawgit.com/showdownjs/showdown/1.8.6/dist/showdown.min.js ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js" ></script>
 <script>
 
 // https://github.com/showdownjs/showdown
