--- a/tootoo-more2/threejs-basic.html
+++ b/tootoo-more2/threejs-basic.html
@@ -98,7 +98,7 @@ function getTitle() {
 	`
 		<h2>
 			<a href=${ urlSourceCode } target=_top title="Source code on GitHub" >
-				<img src=https://status.github.com/images/invertocat.png height=18 >
+				<img src=https://github.com/fluidicon.png height=18 >
 			</a>
 			<a href="" title="Click to reload this page" >${ document.title }</a>
 		</h2>
